--- a/Personality/Personality/Personality/Personality.csproj
+++ b/Personality/Personality/Personality/Personality.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="Xamarin.Forms" Version="4.2.0.848062" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="AnswerPage.xaml.cs">
+      <DependentUpon>AnswerPage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
