--- a/Personality/Personality/Personality.Android/Personality.Android.csproj
+++ b/Personality/Personality/Personality.Android/Personality.Android.csproj
@@ -104,13 +104,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\spells.jpg" />
+    <AndroidResource Include="Resources\drawable\science.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\potion.jpg" />
+    <AndroidResource Include="Resources\drawable\strength.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\crystal.jpg" />
+    <AndroidResource Include="Resources\drawable\gymnastics.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
